--- a/sass/ui/nav/drawer/_layout.scss
+++ b/sass/ui/nav/drawer/_layout.scss
@@ -8,7 +8,7 @@
     left: 0;
     min-height: 100%;
     background: $drawer-background;
-    z-index: $MAX-Z-INDEX;
+    z-index: -1000;
     border-width: 0 $drawer-border-width 0 0;
     border-style: $drawer-border-style;
     border-color: $drawer-border-color;
@@ -24,6 +24,7 @@
 
   #{mod($drawer-class, open)} {
     @include transform(translateX(0));
+    z-index: $MAX-Z-INDEX;
     @include slide($SLOW, ease-in-out);
   }
 
