--- a/sass/grid/_variables.scss
+++ b/sass/grid/_variables.scss
@@ -10,27 +10,27 @@ $grid-col-class: ".#{$grid-col-name}" !default;
 
 $grid-gutter: (
   xs: 8px,
-  s: 12px,
-  m: 12px,
-  l: 16px,
+  sm: 12px,
+  md: 12px,
+  lg: 16px,
   xl: 24px,
 ) !default;
 
 
 $grid-columns: (
   xs: 4,
-  s: 4,
-  m: 8,
-  l: 12,
+  sm: 4,
+  md: 8,
+  lg: 12,
   xl: 16,
 ) !default;
 
 
 $grid-breakpoint: (
   xs: $phone-s,
-  s: $phone-max,
-  m: $tablet-max,
-  l: $desktop-max-m,
+  sm: $phone-max,
+  md: $tablet-max,
+  lg: $desktop-max-m,
   xl: $desktop-l
 ) !default;
 
