--- a/sass/ui/nav/drawer/_layout.scss
+++ b/sass/ui/nav/drawer/_layout.scss
@@ -13,7 +13,7 @@
     border-style: $drawer-border-style;
     border-color: $drawer-border-color;
     overflow-y: auto;
-    @include transform(translateX(-100%));
+    @include transform(translate3d(-100%, 0, 0));
     @include box-shadow($drawer-box-shadow);
     @include slide($SLOW, ease-in-out);
   }
@@ -23,7 +23,7 @@
   }
 
   #{mod($drawer-class, open)} {
-    @include transform(translateX(0));
+    @include transform(translate3d(0, 0, 0));
     z-index: $MAX-Z-INDEX;
     @include slide($SLOW, ease-in-out);
   }
@@ -41,12 +41,12 @@
     min-width: 100%;
     min-height: initial;
     border-width: 0 0 $drawer-border-width 0;
-    @include transform(translateY(-100%));
+    @include transform(translate3d(0, -100%, 0));
     @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, top)}#{mod($drawer-class, open)} {
-    @include transform(translateY(0));
+    @include transform(translate3d(0, 0, 0));
     @include slide($SLOW, ease-in-out);
   }
 
@@ -56,12 +56,12 @@
     bottom: 0;
     right: 0;
     border-width: 0 0 0 $drawer-border-width;
-    @include transform(translateX(100%));
+    @include transform(translate3d(100%, 0, 0));
     @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, right)}#{mod($drawer-class, open)} {
-    @include transform(translateX(0));
+    @include transform(translate3d(0, 0, 0));
     @include slide($SLOW, ease-in-out);
   }
 
@@ -73,14 +73,12 @@
     min-height: initial;
     width: 100%;
     border-width: $drawer-border-width 0 0 0;
-    @include transform(translateY(100%));
+    @include transform(translate3d(0, 100%, 0));
     @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, bottom)}#{mod($drawer-class, open)} {
-    @include transform(translateY(0));
+    @include transform(translate3d(0, 0, 0));
     @include slide($SLOW, ease-in-out);
   }
-
-  @include extend-flex($drawer-name, $drawer-class);
 }
