--- a/sass/ui/nav/paginate/_variables.scss
+++ b/sass/ui/nav/paginate/_variables.scss
@@ -12,7 +12,7 @@ $paginate-link-border-style: solid !default;
 $paginate-link-border-color: rgba(0, 0, 0, 0.14) !default;
 $paginate-link-background: $white !default;
 $paginate-link-border-radius: $border-radius !default;
-$paginate-link-padding: round(map-get($grid-gutter, l) / 2) round(map-get($grid-gutter, l)) !default;
+$paginate-link-padding: round(map-get($grid-gutter, lg) / 2) round(map-get($grid-gutter, lg)) !default;
 $paginate-link-color: $link-color !default;
 $paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-active-color: $link-active-color !default;
